--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "URL Shortener",
-    "description": "URL Shortener using bit.ly by Thành Vũ",
+    "name": "Misalink",
+    "description": "Misalink shorten url",
     "version": "1.0",
     "browser_action": {
       "default_icon": "./icons/icon.png",
